--- a/auth/config/config.local.yaml
+++ b/auth/config/config.local.yaml
@@ -1,25 +1,31 @@
 env: "local"
+codeLife: "10m"
 
 db:
   type: "postgres"
   port: 5432
-  host: "localhost"
+  host: "db"
   user: "postgres"
   password: "postgres"
   name: "auth"
-  ssl_mode: "disable"
-  pool_max_conn: 20
-  pool_max_conn_lifetime: "2h"
+  sslMode: "disable"
+  poolMaxConn: 20
+  poolMaxConnLifetime: "2h"
 
-grpc_server:
-  address: ":50051"
+grpcServer:
+  address: ":54821"
+  port: 54821
 
 yandex_o_auth:
-  yandex_client_id: "your_yandex_app_id"
-  yandex_client_secret: "your_yandex_app_secret"
-  yandex_redirect_url: "https://your-domain.com/auth/yandex/callback"
+  yandexClientId: "your_yandex_app_id"
+  yandexClientSecret: "your_yandex_app_secret"
+  yandexRedirectUrl: "https://your-domain.com/auth/yandex/callback"
 
-jwt:
-  jwt_secret: "very_strong_secret_key_here!"
-  access_duration: "15m"
-  refresh_duration: "720h"
+jwtRAW:
+  privateKey: "config/private.pem"
+  publicKey: "config/public.pem"
+  refreshPrivateKey: "config/private.pem"
+  refreshPublicKey: "config/public.pem"
+  accessTtl: 15m
+  refreshTtl: 168h # 7 дней
+  issuer: "auth.service.local"
