feat auth && notify: wire 2 services and add taskfile for start

--- a/auth/docker-compose.yaml
+++ b/auth/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
       db:
         condition: service_healthy
     networks:
-      - internal
+      - default
   db:
     image: postgres:latest
     container_name: db
@@ -29,8 +29,8 @@ services:
       timeout: 5s
       retries: 5
     networks:
-      - internal
+      - default
 
 networks:
-  internal:
-    name: auth_service
+  default:
+    name: risp
