--- a/notify/docker-compose.yaml
+++ b/notify/docker-compose.yaml
@@ -3,12 +3,13 @@ services:
     build: .
     container_name: notify
     ports:
-      - "54821:54821"
+      - "54822:54822"
     environment:
       # енвы подключения к БД
       - CONFIG_PATH=config/config.local.docker.yaml
     networks:
-      - internal
+      - default
 networks:
-  internal:
-    name: notify
+  default:
+    external: true
+    name: risp
