--- a/menu_service/docker-compose.yaml
+++ b/menu_service/docker-compose.yaml
@@ -1,9 +1,9 @@
 services:
-  auth_service:
+  menu_service:
     build: .
-    container_name: auth_service
+    container_name: menu_service
     ports:
-      - "54821:54821"
+      - "54823:54821"
     environment:
       - CONFIG_PATH=config/config.local.yaml
     depends_on:
@@ -17,7 +17,7 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: auth
+      POSTGRES_DB: menu
     ports:
       - "5432:5432"
     command: postgres
@@ -30,6 +30,26 @@ services:
       retries: 5
     networks:
       - default
+  minio:
+    image: minio/minio:latest
+    container_name: minio
+    ports:
+      - "9000:9000" # S3 API
+      - "9001:9001" # Web UI
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    command: server --console-address ":9001" /data
+    volumes:
+      - minio-data:/data
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/ready"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
+volumes:
+  minio-data:
 
 networks:
   default:
