--- a/notify/dockerfile
+++ b/notify/dockerfile
@@ -5,6 +5,7 @@ WORKDIR /bot
 COPY go.mod go.sum ./
 
 RUN go mod download
+# RUN go install github.com/grpc-ecosystem/grpc-health-probe@v0.4.11
 
 COPY . .
 
@@ -17,7 +18,7 @@ WORKDIR /bot
 
 COPY --from=builder /bot/sbot .
 COPY --from=builder /bot/config/* ./config/
-
+# COPY --from=builder /go/bin/grpc-health-probe /grpc-health-probe
 
 EXPOSE 54822
 
