feat payment: init

--- a/payment_service/dockerfile
+++ b/payment_service/dockerfile
@@ -11,13 +11,13 @@ RUN CGO_ENABLED=0 go build \
     -trimpath \
     -ldflags="-s -w -buildid= -extldflags=-static" \
     -buildvcs=false \
-    -o user ./cmd/user
+    -o payment ./cmd/payment
 
 FROM gcr.io/distroless/static-debian12
 
-WORKDIR /user
+WORKDIR /payment
 
-COPY --from=builder /app/user .
+COPY --from=builder /app/payment .
 
 COPY --from=builder /app/config ./config
 
@@ -26,4 +26,4 @@ COPY --from=builder /app/config ./config
 
 EXPOSE 54821
 
-CMD ["./user"]
+CMD ["./payment"]
