--- a/payment_service/docker-compose.yaml
+++ b/payment_service/docker-compose.yaml
@@ -1,7 +1,7 @@
 services:
   menu_service:
     build: .
-    container_name: order_service
+    container_name: payment_service
     ports:
       - "54823:54821"
     environment:
