feat menu: something

--- a/menu_service/config/config.local.yaml
+++ b/menu_service/config/config.local.yaml
@@ -1,17 +1,12 @@
 env: "local"
 
-# notifyClient:
-#   address: "notify:54822"
-#   baseDelay: 1s
-#   multiplier: 1.5
-#   maxDelay: 5s
-#   minConnectTimeout: 5s
 minio:
   endpoint: "localhost:9000"
   accessKey: "admin"
   secretKey: "password"
   useSsl: false
   bucket: "images"
+  urlExpiry: "15m"
 
 db:
   type: "postgres"
