--- a/notify/dockerfile
+++ b/notify/dockerfile
@@ -1,11 +1,12 @@
 FROM golang:1.24-alpine AS builder
+RUN apk add --no-cache git
+
 
 WORKDIR /bot
 
 COPY go.mod go.sum ./
 
 RUN go mod download
-# RUN go install github.com/grpc-ecosystem/grpc-health-probe@v0.4.11
 
 COPY . .
 
@@ -18,7 +19,6 @@ WORKDIR /bot
 
 COPY --from=builder /bot/sbot .
 COPY --from=builder /bot/config/* ./config/
-# COPY --from=builder /go/bin/grpc-health-probe /grpc-health-probe
 
 EXPOSE 54822
 
