--- a/order_service/docker-compose.yaml
+++ b/order_service/docker-compose.yaml
@@ -1,35 +1,75 @@
+version: "3.8"
+
 services:
-  menu_service:
-    build: .
+  order_service:
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: order_service
     ports:
-      - "54823:54821"
+      - "50051:50051" # gRPC port
     environment:
       - CONFIG_PATH=config/config.local.yaml
+    volumes:
+      - ./config.yaml:/app/config.yaml
     depends_on:
       db:
         condition: service_healthy
     networks:
-      - default
+      - app-network
+
   db:
-    image: postgres:latest
-    container_name: db
+    image: postgres:15
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: menu
+      - POSTGRES_USER=user
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=postgres
     ports:
       - "5432:5432"
-    command: postgres
     volumes:
       - ./migrations/pg/init.sql/:/docker-entrypoint-initdb.d
+      - postgres-data:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 5s
       timeout: 5s
       retries: 5
     networks:
-      - default
+      - app-network
+
+  kafka:
+    image: confluentinc/cp-kafka:7.5.0
+    environment:
+      - KAFKA_BROKER_ID=1
+      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
+      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
+      - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
+      - KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS=0
+      - KAFKA_NUM_PARTITIONS=1
+      - KAFKA_DEFAULT_REPLICATION_FACTOR=1
+    depends_on:
+      - zookeeper
+    ports:
+      - "9092:9092"
+    networks:
+      - app-network
+
+  zookeeper:
+    image: confluentinc/cp-zookeeper:7.5.0
+    environment:
+      - ZOOKEEPER_CLIENT_PORT=2181
+      - ZOOKEEPER_TICK_TIME=2000
+    ports:
+      - "2181:2181"
+    volumes:
+      - zookeeper-data:/var/lib/zookeeper/data
+    networks:
+      - app-network
+
 networks:
-  default:
-    name: risp
+  app-network:
+    driver: bridge
+
+volumes:
+  postgres-data:
+  zookeeper-data:
