--- a/order_service/config/config.docker.yaml
+++ b/order_service/config/config.docker.yaml
@@ -1,27 +1,28 @@
-env: production
+env: local
 db:
-  type: postgres
-  port: 5432
-  host: localhost
-  user: user
-  password: password
-  name: postgres
-  sslMode: false
-  poolMaxConn: 10
-  poolMaxConnLifetime: 1h30m
+  type: "postgres"
+  port: 5435
+  host: "order_db"
+  user: "postgres"
+  password: "postgres"
+  name: "order"
+  sslMode: "disable"
+  poolMaxConn: 20
+  poolMaxConnLifetime: "2h"
 grpcServer:
-  address: 0.0.0.0
+  address: "localhost"
   port: 50051
 kafka:
   brokers:
-    - localhost:9092
+    - kafka:9092
   topic: events
   retryMax: 5
   returnSuccesses: true
 processTimeout: 30s
+
 menuClient:
-  address: http://menu-service:8080
-  baseDelay: 100ms
-  multiplier: 2.0
+  address: "menu_service:50052"
+  baseDelay: 10s
+  multiplier: 1.5
   maxDelay: 5s
-  minConnectTimeout: 1s
+  minConnectTimeout: 5s
