--- a/menu_service/config/config.local.yaml
+++ b/menu_service/config/config.local.yaml
@@ -1,17 +1,17 @@
 env: "local"
 
 minio:
-  endpoint: "localhost:9000"
-  accessKey: "admin"
-  secretKey: "password"
+  endpoint: "minio:9000"
+  accessKey: "minioadmin"
+  secretKey: "minioadmin"
   useSsl: false
   bucket: "images"
   urlExpiry: "15m"
 
 db:
   type: "postgres"
-  port: 5432
-  host: "db"
+  port: 5434
+  host: "menu_db"
   user: "postgres"
   password: "postgres"
   name: "menu"
@@ -20,5 +20,5 @@ db:
   poolMaxConnLifetime: "2h"
 
 grpcServer:
-  address: ":54821"
-  port: 54821
+  address: "localhost"
+  port: 50052
