--- a/menu_service/docker-compose.yaml
+++ b/menu_service/docker-compose.yaml
@@ -7,24 +7,26 @@ services:
     environment:
       - CONFIG_PATH=config/config.local.yaml
     depends_on:
-      db:
+      menu_db:
         condition: service_healthy
     networks:
       - default
-  db:
+  menu_db:
     image: postgres:latest
-    container_name: db
+    container_name: menu_db
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: menu
+    expose:
+      - "5433"
     ports:
-      - "5432:5432"
-    command: postgres
+      - "5433:5433"
+    command: postgres -p 5433
     volumes:
       - ./migrations/pg/init.sql/:/docker-entrypoint-initdb.d
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: ["CMD-SHELL", "pg_isready -U postgres -p 5433"]
       interval: 5s
       timeout: 5s
       retries: 5
