--- a/user_service/config/config.local.yaml
+++ b/user_service/config/config.local.yaml
@@ -1,16 +1,16 @@
-env: "local"
+env: "dev"
 
 db:
   type: "postgres"
-  port: 5432
-  host: "db"
+  port: 5439
+  host: "user_db"
   user: "postgres"
   password: "postgres"
-  name: "menu"
+  name: "user"
   sslMode: "disable"
   poolMaxConn: 20
   poolMaxConnLifetime: "2h"
 
 grpcServer:
-  address: ":54821"
-  port: 54821
+  address: "localhost"
+  port: 50045
