--- a/deploy/config/gate/config.docker.yaml
+++ b/deploy/config/gate/config.docker.yaml
@@ -1,23 +1,23 @@
 server:
   host: "0.0.0.0"
-  port: 8080
+  port: 8090
 
 auth:
   jwt_secret: "your-secret-key"
 
 services:
   auth:
-    host: "auth"
-    port: 50051
+    host: "auth_service"
+    port: 54821
   user:
-    host: "user"
-    port: 50052
+    host: "user_service"
+    port: 50045
   menu:
-    host: "menu"
-    port: 50053
+    host: "menu_service"
+    port: 50052
   order:
-    host: "order"
-    port: 50054
+    host: "order_service"
+    port: 50051
   notify:
-    host: "localhost"
-    port: 50055
+    host: "notify"
+    port: 54822
