--- a/menu_service/config/config.local.yaml
+++ b/menu_service/config/config.local.yaml
@@ -1,4 +1,4 @@
-env: "local"
+env: "prod"
 
 minio:
   endpoint: "minio:9000"
@@ -10,7 +10,7 @@ minio:
 
 db:
   type: "postgres"
-  port: 5434
+  port: 5433
   host: "menu_db"
   user: "postgres"
   password: "postgres"
@@ -22,3 +22,10 @@ db:
 grpcServer:
   address: "localhost"
   port: 50052
+
+telemetry:
+  serviceName: "menu-service"
+  serviceVersion: "1.0.0"
+  environment: "production"
+  metricsPort: 9090
+  traceEndpoint: "menu_service:4317"
