--- a/menu_service/docker-compose.yaml
+++ b/menu_service/docker-compose.yaml
@@ -3,14 +3,18 @@ services:
     build: .
     container_name: menu_service
     ports:
-      - "54823:54821"
+      - "50052:50052"
+      - "9090:9090"
     environment:
-      - CONFIG_PATH=config/config.local.yaml
+      - CONFIG_PATH=/menu/config/config.local.yaml
+    volumes:
+      - ./config:/menu/config
     depends_on:
       menu_db:
         condition: service_healthy
     networks:
       - default
+
   menu_db:
     image: postgres:latest
     container_name: menu_db
